Temporary (permanent?) overlapping times fix

--- a/website/app/static/styles/signup.css
+++ b/website/app/static/styles/signup.css
@@ -177,7 +177,7 @@ content.signup-holder {
     height: 60vh;
     min-width: 800px;
     z-index: 9999;
-    visibility: unset;
+    visibility: hidden;
 }
 
 .section-info-content {
